EDU-413 Fix tags not showing when fewer than 10

--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -52,11 +52,9 @@
 .SearchPage-cellTagsExpandLink {
   font-size: 0.9em;
   display: inline-block;
-  margin-left: 0.2em;
   height: 20px;
   padding: 3px;
-  margin: 3px;
-  margin-left: 1em;
+  margin: 3px 3px 3px 12px;
 }
 
 .SearchPage-titleCell {
